# MoveH

./: .env.example  .gitignore  README.md  SECURITY.md  chain.md
backend/: .env.example  .example.env  README.md  api.py  main.py  modal_app.py  pyproject.toml  test_aptos.py  test_full_system.py
backend/agents/: __init__.py  claim_processor.py  fact_checker.py  forensic_expert.py  judge.py  shelby.py
backend/blockchain/: __init__.py  aptos_client.py  chain_lookup.py
backend/move_smart_contract/: Move.toml  get-fund.md  readme.md
backend/move_smart_contract/sources/: verdict_registry.move  verdict_registry_tests.move
frontend/: README.md  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/components/: Navbar.tsx  SearchHero.tsx  VerificationProgress.tsx  VerificationResult.tsx  mode-toggle.tsx
workflows/: README.md  after-flow.md  fact_checker.md  forensic_expert.md  full_pipeline.md  judge.md
